fix(purpose): tweak font size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,6 +578,7 @@ nav li a {
 
   .purpose .copy {
     margin: 2rem 0 0 0;
+    font-size: 0.9rem;
   }
 }
 /* Purpose Section End */
